spring-kafka-openshift-demo-producer/target/classes/META-INF/fabric8/openshift/spring-kafka-openshift-demo-producer-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-kafka-openshift-demo-producer&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-kafka-openshift-demo-producer
  labels:
    app: spring-kafka-openshift-demo-producer
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.systemcraftsman.demo
  name: spring-kafka-openshift-demo-producer
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-kafka-openshift-demo-producer
    provider: fabric8
    group: com.systemcraftsman.demo
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-kafka-openshift-demo-producer&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-tag: HEAD
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-kafka-openshift-demo-producer
      labels:
        app: spring-kafka-openshift-demo-producer
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.systemcraftsman.demo
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spring-kafka-openshift-demo-producer:latest
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-kafka-openshift-demo-producer:latest
    type: ImageChange
