spring-kafka-openshift-demo-producer/target/classes/META-INF/fabric8/openshift/spring-kafka-openshift-demo-producer-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: spring-kafka-openshift-demo-producer
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.systemcraftsman.demo
  name: spring-kafka-openshift-demo-producer
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-kafka-openshift-demo-producer
